--- a/index.html
+++ b/index.html
@@ -4,33 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Holy Grail</title>
+    <title>Priyanka-Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+          
   </head>
   <body>
     <div class="header">
-      MY AWESOME WEBSITE
+      <div class="my-name">Priyanka Raju</div>
+      <div class="right-links">
+        <ul>
+          <li><a href="https://github.com/Priyarikson" target="_blank"><i class="devicon-github-original"></i></a></li>
+          <li><a href="http://www.linkedin.com/in/priyankaraju92" target="_blank"><i class="devicon-linkedin-plain"></i></a></li>
+          <li><a href="mailto:priyankaraju92@gmail.com"><span class="material-symbols-outlined">mail</span></a></li>
+        </ul>
+      </div>
     </div>
     <div class="body">
       <div class="sidebar">
-        <ul>
-          <li><a href="#">⭐ - link one</a></li>
-          <li><a href="#">🦸🏽‍♂️ - link two</a></li>
-          <li><a href="#">🖌️ - link three</a></li>
-          <li><a href="#">👌🏽 - link four</a></li>
-        </ul>
+        <div class="image"><img src="/Users/priyankaraju/repos/portfolio/images/IMG_2358.jpeg" alt="photo" height="400px" width="300px"></div>
       </div>
       <div class="container">
-        <div class="card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, eveniet? Dolorem dignissimos maiores non delectus possimus dolor nulla repudiandae vitae provident quae, obcaecati ipsam unde impedit corrupti veritatis minima porro?</div>
-        <div class="card">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quasi quaerat qui iure ipsam maiores velit tempora, deleniti nesciunt fuga suscipit alias vero rem, corporis officia totam saepe excepturi odit ea.</div>
-        <div class="card">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis illo ex quas, commodi eligendi aliquam ut, dolor, atque aliquid iure nulla. Laudantium optio accusantium quaerat fugiat, natus officia esse autem?</div>
-        <div class="card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nihil impedit eius amet adipisci dolorum vel nostrum sit excepturi corporis tenetur cum, dolore incidunt blanditiis. Unde earum minima laboriosam eos!</div>
-        <div class="card">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis illo ex quas, commodi eligendi aliquam ut, dolor, atque aliquid iure nulla. Laudantium optio accusantium quaerat fugiat, natus officia esse autem?</div>
-        <div class="card">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus nihil impedit eius amet adipisci dolorum vel nostrum sit excepturi corporis tenetur cum, dolore incidunt blanditiis. Unde earum minima laboriosam eos!</div>
+        <div class="card"> an online marketplace for used items.This is a simple web application with features such as register, login, homepage, add listing and listings. </div>
+        <div class="card">Use JavaScript with the DOM and localStorage APIs to make a to-do-list that user can add items to</div>
+        <div class="card"> The website will consist of a main index page which will have links to a few recipes.</div>
+        <div class="card"> a webpage using HTML, CSS, using flexbox.</div>
+        <div class="card">a webpage using HTML, CSS, and JavaScript to let users answer trivia questions.</div>
+        <div class="card">Using DOM manipulation.</div>
       </div>
     </div>
     <div class="footer">
-      Priyanka Raju
+      Priyanka Raju &copy; 2022
     </div>
   </body>
 </html>
