structure is good,card is good

--- a/index.html
+++ b/index.html
@@ -21,17 +21,195 @@
         </ul>
       </div>
     </div>
-    <div class="body">
+    <div class="hero">
       <div class="sidebar">
-        <div class="image"><img src="/Users/priyankaraju/repos/portfolio/images/IMG_2358.jpeg" alt="photo" height="400px" width="300px"></div>
+        <div class="image"><img src="/Users/priyankaraju/repos/portfolio/images/my-image.jpeg" alt="photo" height="400px" width="300px"></div>
+        <div class="about-me">
+          <h2>About me</h2>
+        </div>
+        <div class="me-thing">
+          Hi there!<br/>
+          i'm a web developer in Jersey City, New Jersey! I've been self teaching myself code for the past few months, primarily focusing on JavaScript,Node.js and React.js working toward full stack projects.
+        </div>
+        <div class="skills">
+          <h2>skills</h2>
+        </div>
+        <div class="skills-icon">
+          <ul>
+            <li>
+              <i class="devicon-html5-plain-wordmark colored"></i>
+            </li>
+            <li>
+              <i class="devicon-css3-plain-wordmark"></i>
+            </li>
+            <li>
+              <i class="devicon-javascript-plain colored"></i>
+            </li>
+            <li>
+              <i class="devicon-nodejs-plain-wordmark"></i>
+            </li>
+            <li>
+              <i class="devicon-react-original-wordmark colored"></i>
+            </li>
+          </ul>
+          <ul>
+            <li>
+              <i class="devicon-bootstrap-plain-wordmark colored"></i>
+            </li>
+            <li>
+              <i class="devicon-azure-plain-wordmark colored"></i>
+            </li>
+            <li>
+              <i class="devicon-sqlite-plain-wordmark"></i>
+            </li>
+            <li>
+              <i class="devicon-python-plain-wordmark colored"></i>
+            </li>
+          </ul>
+            
+          
+        </div>
       </div>
       <div class="container">
-        <div class="card"> an online marketplace for used items.This is a simple web application with features such as register, login, homepage, add listing and listings. </div>
-        <div class="card">Use JavaScript with the DOM and localStorage APIs to make a to-do-list that user can add items to</div>
-        <div class="card"> The website will consist of a main index page which will have links to a few recipes.</div>
-        <div class="card"> a webpage using HTML, CSS, using flexbox.</div>
-        <div class="card">a webpage using HTML, CSS, and JavaScript to let users answer trivia questions.</div>
-        <div class="card">Using DOM manipulation.</div>
+        <div class="my-work">Projects</div>
+        <div class="cards">
+          <div class="card"> 
+            <div class="card-image">
+              <img src="../images/garage.png" alt="test" height="300px" width="400">
+            </div>
+            <div class="card-header">
+              <div>
+                <h4>Garage Sale</h4>
+              </div>
+              <div>
+                <ul>
+                  <li><a href="https://github.com/Priyarikson" target="_blank"><i class="devicon-github-original"></i></a></li>
+                  <li><a href="mailto:priyankaraju92@gmail.com"><span class="material-symbols-outlined">open_in_new</span></a></li>
+                </ul>
+              </div>
+            </div>
+            <p>an online marketplace for used items.This is a simple web application with features such as register, login, homepage, add listing and listings. </p>
+          </div>
+          <div class="card"> 
+            <div class="card-image">
+              <img src="../images/garage.png" alt="test" height="300px" width="400">
+            </div>
+            <div class="card-header">
+              <div>
+                <h4>Garage Sale</h4>
+              </div>
+              <div>
+                <ul>
+                  <li><a href="https://github.com/Priyarikson" target="_blank"><i class="devicon-github-original"></i></a></li>
+                  <li><a href="mailto:priyankaraju92@gmail.com"><span class="material-symbols-outlined">open_in_new</span></a></li>
+                </ul>
+              </div>
+            </div>
+            <p>an online marketplace for used items.This is a simple web application with features such as register, login, homepage, add listing and listings. </p>
+          </div>
+          <div class="card"> 
+            <div class="card-image">
+              <img src="../images/garage.png" alt="test" height="300px" width="400">
+            </div>
+            <div class="card-header">
+              <div>
+                <h4>Garage Sale</h4>
+              </div>
+              <div>
+                <ul>
+                  <li><a href="https://github.com/Priyarikson" target="_blank"><i class="devicon-github-original"></i></a></li>
+                  <li><a href="mailto:priyankaraju92@gmail.com"><span class="material-symbols-outlined">open_in_new</span></a></li>
+                </ul>
+              </div>
+            </div>
+            <p>an online marketplace for used items.This is a simple web application with features such as register, login, homepage, add listing and listings. </p>
+          </div>
+          <div class="card"> 
+            <div class="card-image">
+              <img src="../images/garage.png" alt="test" height="300px" width="400">
+            </div>
+            <div class="card-header">
+              <div>
+                <h4>Garage Sale</h4>
+              </div>
+              <div>
+                <ul>
+                  <li><a href="https://github.com/Priyarikson" target="_blank"><i class="devicon-github-original"></i></a></li>
+                  <li><a href="mailto:priyankaraju92@gmail.com"><span class="material-symbols-outlined">open_in_new</span></a></li>
+                </ul>
+              </div>
+            </div>
+            <p>an online marketplace for used items.This is a simple web application with features such as register, login, homepage, add listing and listings. </p>
+          </div>
+          <div class="card"> 
+            <div class="card-image">
+              <img src="../images/garage.png" alt="test" height="300px" width="400">
+            </div>
+            <div class="card-header">
+              <div>
+                <h4>Garage Sale</h4>
+              </div>
+              <div>
+                <ul>
+                  <li><a href="https://github.com/Priyarikson" target="_blank"><i class="devicon-github-original"></i></a></li>
+                  <li><a href="mailto:priyankaraju92@gmail.com"><span class="material-symbols-outlined">open_in_new</span></a></li>
+                </ul>
+              </div>
+            </div>
+            <p>an online marketplace for used items.This is a simple web application with features such as register, login, homepage, add listing and listings. </p>
+          </div>
+          <div class="card"> 
+            <div class="card-image">
+              <img src="../images/garage.png" alt="test" height="300px" width="400">
+            </div>
+            <div class="card-header">
+              <div>
+                <h4>Garage Sale</h4>
+              </div>
+              <div>
+                <ul>
+                  <li><a href="https://github.com/Priyarikson" target="_blank"><i class="devicon-github-original"></i></a></li>
+                  <li><a href="mailto:priyankaraju92@gmail.com"><span class="material-symbols-outlined">open_in_new</span></a></li>
+                </ul>
+              </div>
+            </div>
+            <p>an online marketplace for used items.This is a simple web application with features such as register, login, homepage, add listing and listings. </p>
+          </div>
+          <div class="card"> 
+            <div class="card-image">
+              <img src="../images/garage.png" alt="test" height="300px" width="400">
+            </div>
+            <div class="card-header">
+              <div>
+                <h4>Garage Sale</h4>
+              </div>
+              <div>
+                <ul>
+                  <li><a href="https://github.com/Priyarikson" target="_blank"><i class="devicon-github-original"></i></a></li>
+                  <li><a href="mailto:priyankaraju92@gmail.com"><span class="material-symbols-outlined">open_in_new</span></a></li>
+                </ul>
+              </div>
+            </div>
+            <p>an online marketplace for used items.This is a simple web application with features such as register, login, homepage, add listing and listings. </p>
+          </div>
+          <div class="card"> 
+            <div class="card-image">
+              <img src="../images/garage.png" alt="test" height="300px" width="400">
+            </div>
+            <div class="card-header">
+              <div>
+                <h4>Garage Sale</h4>
+              </div>
+              <div>
+                <ul>
+                  <li><a href="https://github.com/Priyarikson" target="_blank"><i class="devicon-github-original"></i></a></li>
+                  <li><a href="mailto:priyankaraju92@gmail.com"><span class="material-symbols-outlined">open_in_new</span></a></li>
+                </ul>
+              </div>
+            </div>
+            <p>an online marketplace for used items.This is a simple web application with features such as register, login, homepage, add listing and listings. </p>
+          </div>
+        </div>
       </div>
     </div>
     <div class="footer">
