added scrolling and updated cards

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </ul>
       </div>
     </div>
-    <div class="hero">
+    <div class="site-body">
       <div class="sidebar">
         <div class="image"><img src="/Users/priyankaraju/repos/portfolio/images/my-image.jpeg" alt="photo" height="400px" width="300px"></div>
         <div class="about-me">
@@ -70,25 +70,112 @@
           
         </div>
       </div>
-      <div class="container">
-        <div class="my-work">Projects</div>
-        <div class="cards">
+      
+      <div class="page-container">
+        <div class="page-head">Projects</div>
+        <div class="scroll">
+        <div class="page-body">
           <div class="card"> 
             <div class="card-image">
-              <img src="../images/garage.png" alt="test" height="300px" width="400">
+              <img src="../images/garage.png" alt="pic2" height="300px" width="400">
             </div>
-            <div class="card-header">
+            <div class="card-header" style = "background:rgb(3, 103, 18);" >
               <div>
                 <h4>Garage Sale</h4>
               </div>
               <div>
                 <ul>
-                  <li><a href="https://github.com/Priyarikson" target="_blank"><i class="devicon-github-original"></i></a></li>
-                  <li><a href="mailto:priyankaraju92@gmail.com"><span class="material-symbols-outlined">open_in_new</span></a></li>
+                  <li><a href="https://github.com/Priyarikson/garage-sale" target="_blank"><i class="devicon-github-original"></i></a></li>
+                  <li><a href="https://youtu.be/ZDyV62YtwDA"><span class="material-symbols-outlined">open_in_new</span></a></li>
                 </ul>
               </div>
             </div>
-            <p>an online marketplace for used items.This is a simple web application with features such as register, login, homepage, add listing and listings. </p>
+            <p>an online marketplace for used items.This is a simple web application with features such as register, login, homepage, add listing and listings. This was a hands-on project giving me exposure to SQL, Python, Flask, HTML etc.</p>
+          </div>
+          <div class="card"> 
+            <div class="card-image">
+              <img src="../images/landing-page.png" alt="pic3" height="300px" width="400">
+            </div>
+            <div class="card-header" style = "background:rgb(5, 142, 246);">
+              <div>
+                <h4>Landing Page</h4>
+              </div>
+              <div>
+                <ul>
+                  <li><a href="https://github.com/Priyarikson/web-page" target="_blank"><i class="devicon-github-original"></i></a></li>
+                  <li><a href="https://priyarikson.github.io/web-page/"><span class="material-symbols-outlined">open_in_new</span></a></li>
+                </ul>
+              </div>
+            </div>
+            <p>a webpage using HTML, CSS, using flexbox.The “Flexible Box” or “Flexbox” layout mode offers an alternative to Floats for defining the overall appearance of a web page.</p>
+          </div>
+          <div class="card"> 
+            <div class="card-image">
+              <img src="../images/recipes.png" alt="pic4" height="300px" width="400">
+            </div>
+            <div class="card-header" style = "background:rgb(232, 121, 3);">
+              <div>
+                <h4>Recipes</h4>
+              </div>
+              <div>
+                <ul>
+                  <li><a href="https://github.com/Priyarikson/odin-recipes" target="_blank"><i class="devicon-github-original"></i></a></li>
+                  <li><a href="https://priyarikson.github.io/odin-recipes/"><span class="material-symbols-outlined">open_in_new</span></a></li>
+                </ul>
+              </div>
+            </div>
+            <p>The website will consist of a main index page which will have links to a few recipes. </p>
+          </div>
+          <div class="card"> 
+            <div class="card-image">
+              <img src="../images/rock-paper-scissors.png" alt="pic5" height="300px" width="400">
+            </div>
+            <div class="card-header" style = "background:rgb(0, 0, 0);" >
+              <div>
+                <h4>Rock Paper Scissors</h4>
+              </div>
+              <div>
+                <ul>
+                  <li><a href="https://github.com/Priyarikson/Rock-Paper-Scissors-Game" target="_blank"><i class="devicon-github-original"></i></a></li>
+                  <li><a href="https://priyarikson.github.io/Rock-Paper-Scissors-Game/"><span class="material-symbols-outlined">open_in_new</span></a></li>
+                </ul>
+              </div>
+            </div>
+            <p>An interactive and a turn-based game board</p>
+          </div>
+          <div class="card"> 
+            <div class="card-image">
+              <img src="../images/noughts-and-crosses.png" alt="pic6" height="300px" width="400">
+            </div>
+            <div class="card-header" style = "background:rgb(0, 0, 163);">
+              <div>
+                <h4>Noughts-and-Crosses</h4>
+              </div>
+              <div>
+                <ul>
+                  <li><a href="https://github.com/Priyarikson/Noughts-and-Crosses" target="_blank"><i class="devicon-github-original"></i></a></li>
+                  <li><a href="https://priyarikson.github.io/Noughts-and-Crosses/"><span class="material-symbols-outlined">open_in_new</span></a></li>
+                </ul>
+              </div>
+            </div>
+            <p>An interactive and a turn-based game board,can be played with two players.A lopp to check for a winner.</p>
+          </div>
+          <div class="card"> 
+            <div class="card-image">
+              <img src="../images/to-do-app.png" alt="test" height="300px" width="400">
+            </div>
+            <div class="card-header" style = "background:rgb(163, 0, 0);">
+              <div>
+                <h4>To-Do-List-App</h4>
+              </div>
+              <div>
+                <ul>
+                  <li><a href="https://github.com/Priyarikson/TO-DO-LIST-APP" target="_blank"><i class="devicon-github-original"></i></a></li>
+                  <li><a href="https://priyarikson.github.io/TO-DO-LIST-APP/"><span class="material-symbols-outlined">open_in_new</span></a></li>
+                </ul>
+              </div>
+            </div>
+            <p>Use JavaScript with the DOM and localStorage APIs to make a to-do-list that user can add items to</p>
           </div>
           <div class="card"> 
             <div class="card-image">
@@ -124,91 +211,7 @@
             </div>
             <p>an online marketplace for used items.This is a simple web application with features such as register, login, homepage, add listing and listings. </p>
           </div>
-          <div class="card"> 
-            <div class="card-image">
-              <img src="../images/garage.png" alt="test" height="300px" width="400">
-            </div>
-            <div class="card-header">
-              <div>
-                <h4>Garage Sale</h4>
-              </div>
-              <div>
-                <ul>
-                  <li><a href="https://github.com/Priyarikson" target="_blank"><i class="devicon-github-original"></i></a></li>
-                  <li><a href="mailto:priyankaraju92@gmail.com"><span class="material-symbols-outlined">open_in_new</span></a></li>
-                </ul>
-              </div>
-            </div>
-            <p>an online marketplace for used items.This is a simple web application with features such as register, login, homepage, add listing and listings. </p>
-          </div>
-          <div class="card"> 
-            <div class="card-image">
-              <img src="../images/garage.png" alt="test" height="300px" width="400">
-            </div>
-            <div class="card-header">
-              <div>
-                <h4>Garage Sale</h4>
-              </div>
-              <div>
-                <ul>
-                  <li><a href="https://github.com/Priyarikson" target="_blank"><i class="devicon-github-original"></i></a></li>
-                  <li><a href="mailto:priyankaraju92@gmail.com"><span class="material-symbols-outlined">open_in_new</span></a></li>
-                </ul>
-              </div>
-            </div>
-            <p>an online marketplace for used items.This is a simple web application with features such as register, login, homepage, add listing and listings. </p>
-          </div>
-          <div class="card"> 
-            <div class="card-image">
-              <img src="../images/garage.png" alt="test" height="300px" width="400">
-            </div>
-            <div class="card-header">
-              <div>
-                <h4>Garage Sale</h4>
-              </div>
-              <div>
-                <ul>
-                  <li><a href="https://github.com/Priyarikson" target="_blank"><i class="devicon-github-original"></i></a></li>
-                  <li><a href="mailto:priyankaraju92@gmail.com"><span class="material-symbols-outlined">open_in_new</span></a></li>
-                </ul>
-              </div>
-            </div>
-            <p>an online marketplace for used items.This is a simple web application with features such as register, login, homepage, add listing and listings. </p>
-          </div>
-          <div class="card"> 
-            <div class="card-image">
-              <img src="../images/garage.png" alt="test" height="300px" width="400">
-            </div>
-            <div class="card-header">
-              <div>
-                <h4>Garage Sale</h4>
-              </div>
-              <div>
-                <ul>
-                  <li><a href="https://github.com/Priyarikson" target="_blank"><i class="devicon-github-original"></i></a></li>
-                  <li><a href="mailto:priyankaraju92@gmail.com"><span class="material-symbols-outlined">open_in_new</span></a></li>
-                </ul>
-              </div>
-            </div>
-            <p>an online marketplace for used items.This is a simple web application with features such as register, login, homepage, add listing and listings. </p>
-          </div>
-          <div class="card"> 
-            <div class="card-image">
-              <img src="../images/garage.png" alt="test" height="300px" width="400">
-            </div>
-            <div class="card-header">
-              <div>
-                <h4>Garage Sale</h4>
-              </div>
-              <div>
-                <ul>
-                  <li><a href="https://github.com/Priyarikson" target="_blank"><i class="devicon-github-original"></i></a></li>
-                  <li><a href="mailto:priyankaraju92@gmail.com"><span class="material-symbols-outlined">open_in_new</span></a></li>
-                </ul>
-              </div>
-            </div>
-            <p>an online marketplace for used items.This is a simple web application with features such as register, login, homepage, add listing and listings. </p>
-          </div>
+        </div>
         </div>
       </div>
     </div>
