--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="site-body">
       <div class="sidebar">
-        <div class="image"><img src="/Users/priyankaraju/repos/portfolio/images/my-image.jpeg" alt="photo" height="400px" width="300px"></div>
+        <div class="image"><img src="./images/my-image.jpeg" alt="photo" height="400px" width="300px"></div>
         <div class="about-me">
           <h2>About me</h2>
         </div>
@@ -77,7 +77,7 @@
         <div class="page-body">
           <div class="card"> 
             <div class="card-image">
-              <img src="../images/garage.png" alt="pic2" height="300px" width="400">
+              <img src="./images/garage.png" alt="pic2" height="300px" width="400">
             </div>
             <div class="card-header" style = "background:rgb(3, 103, 18);" >
               <div>
@@ -94,7 +94,7 @@
           </div>
           <div class="card"> 
             <div class="card-image">
-              <img src="../images/landing-page.png" alt="pic3" height="300px" width="400">
+              <img src="./images/landing-page.png" alt="pic3" height="300px" width="400">
             </div>
             <div class="card-header" style = "background:rgb(5, 142, 246);">
               <div>
@@ -111,7 +111,7 @@
           </div>
           <div class="card"> 
             <div class="card-image">
-              <img src="../images/recipes.png" alt="pic4" height="300px" width="400">
+              <img src="./images/recipes.png" alt="pic4" height="300px" width="400">
             </div>
             <div class="card-header" style = "background:rgb(232, 121, 3);">
               <div>
@@ -128,7 +128,7 @@
           </div>
           <div class="card"> 
             <div class="card-image">
-              <img src="../images/rock-paper-scissors.png" alt="pic5" height="300px" width="400">
+              <img src="./images/rock-paper-scissors.png" alt="pic5" height="300px" width="400">
             </div>
             <div class="card-header" style = "background:rgb(0, 0, 0);" >
               <div>
@@ -145,7 +145,7 @@
           </div>
           <div class="card"> 
             <div class="card-image">
-              <img src="../images/noughts-and-crosses.png" alt="pic6" height="300px" width="400">
+              <img src="./images/noughts-and-crosses.png" alt="pic6" height="300px" width="400">
             </div>
             <div class="card-header" style = "background:rgb(0, 0, 163);">
               <div>
@@ -162,7 +162,7 @@
           </div>
           <div class="card"> 
             <div class="card-image">
-              <img src="../images/to-do-app.png" alt="test" height="300px" width="400">
+              <img src="./images/to-do-app.png" alt="test" height="300px" width="400">
             </div>
             <div class="card-header" style = "background:rgb(163, 0, 0);">
               <div>
@@ -179,7 +179,7 @@
           </div>
           <div class="card"> 
             <div class="card-image">
-              <img src="../images/garage.png" alt="test" height="300px" width="400">
+              <img src="./images/garage.png" alt="test" height="300px" width="400">
             </div>
             <div class="card-header">
               <div>
@@ -196,7 +196,7 @@
           </div>
           <div class="card"> 
             <div class="card-image">
-              <img src="../images/garage.png" alt="test" height="300px" width="400">
+              <img src="./images/garage.png" alt="test" height="300px" width="400">
             </div>
             <div class="card-header">
               <div>
