--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <div class="card-image">
               <img src="./images/to-do-app.png" alt="test" height="300px" width="400">
             </div>
-            <div class="card-header" style = "background:rgb(163, 0, 0);">
+            <div class="card-header" style = "background:rgb(240, 149, 239);">
               <div>
                 <h4>To-Do-List-App</h4>
               </div>
@@ -179,37 +179,71 @@
           </div>
           <div class="card"> 
             <div class="card-image">
-              <img src="./images/garage.png" alt="test" height="300px" width="400">
+              <img src="./images/airbnb-clone.png" alt="test" height="300px" width="400">
             </div>
-            <div class="card-header">
+            <div class="card-header" style = "background:rgb(166, 9, 245);">
               <div>
-                <h4>Garage Sale</h4>
+                <h4>React airbnb-clone</h4>
               </div>
               <div>
                 <ul>
-                  <li><a href="https://github.com/Priyarikson" target="_blank"><i class="devicon-github-original"></i></a></li>
-                  <li><a href="mailto:priyankaraju92@gmail.com"><span class="material-symbols-outlined">open_in_new</span></a></li>
+                  <li><a href="https://github.com/Priyarikson/react-AirBnb-clone" target="_blank"><i class="devicon-github-original"></i></a></li>
+                  <li><a href="https://priyarikson.github.io/react-AirBnb-clone/"><span class="material-symbols-outlined">open_in_new</span></a></li>
                 </ul>
               </div>
             </div>
-            <p>an online marketplace for used items.This is a simple web application with features such as register, login, homepage, add listing and listings. </p>
+            <p>An interactive UI made using React.</p>
           </div>
           <div class="card"> 
             <div class="card-image">
-              <img src="./images/garage.png" alt="test" height="300px" width="400">
+              <img src="./images/react-to-do.png" alt="test" height="300px" width="400">
             </div>
-            <div class="card-header">
+            <div class="card-header" style = "background:rgb(224, 224, 1);">
               <div>
-                <h4>Garage Sale</h4>
+                <h4>React To-Do-App</h4>
               </div>
               <div>
                 <ul>
-                  <li><a href="https://github.com/Priyarikson" target="_blank"><i class="devicon-github-original"></i></a></li>
-                  <li><a href="mailto:priyankaraju92@gmail.com"><span class="material-symbols-outlined">open_in_new</span></a></li>
+                  <li><a href="https://github.com/Priyarikson/React_to_do_app" target="_blank"><i class="devicon-github-original"></i></a></li>
+                  <li><a href="https://priyarikson.github.io/React_to_do_app/"><span class="material-symbols-outlined">open_in_new</span></a></li>
                 </ul>
               </div>
             </div>
-            <p>an online marketplace for used items.This is a simple web application with features such as register, login, homepage, add listing and listings. </p>
+            <p>An interactive UI made using React.</p>
+          </div>
+          <div class="card"> 
+            <div class="card-image">
+              <img src="./images/netflix-clone.png" alt="test" height="300px" width="400">
+            </div>
+            <div class="card-header" style = "background:rgb(163, 0, 11);">
+              <div>
+                <h4>React Netflix-clone</h4>
+              </div>
+              <div>
+                <ul>
+                  <li><a href="https://github.com/Priyarikson/react-Netflix" target="_blank"><i class="devicon-github-original"></i></a></li>
+                  <li><a href="https://priyarikson.github.io/react-Netflix/"><span class="material-symbols-outlined">open_in_new</span></a></li>
+                </ul>
+              </div>
+            </div>
+            <p>An interactive UI made using React.</p>
+          </div>
+          <div class="card"> 
+            <div class="card-image">
+              <img src="./images/travel-journal.png" alt="test" height="300px" width="400">
+            </div>
+            <div class="card-header" style = "background:rgb(5, 219, 55);">
+              <div>
+                <h4>React Travel-Journal</h4>
+              </div>
+              <div>
+                <ul>
+                  <li><a href="https://github.com/Priyarikson/react-travel-journal" target="_blank"><i class="devicon-github-original"></i></a></li>
+                  <li><a href="https://priyarikson.github.io/react-travel-journal/"><span class="material-symbols-outlined">open_in_new</span></a></li>
+                </ul>
+              </div>
+            </div>
+            <p>An interactive UI made using React.</p>
           </div>
         </div>
         </div>
