--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
           <h2>About me</h2>
         </div>
         <div class="me-thing">
-          Hi there!<br/>
-          I'm Priyanka.I am interested in web development.I've been self teaching myself code for the past few months, primarily focusing on JavaScript,Node.js and React.js working toward full stack projects.
+          <p>Hi there!<br/>
+          I'm Priyanka. I am interested in web development and making interactive web applications.
+           I've been self teaching myself code for the past few months, primarily focusing on JavaScript,Node.js and React.js working toward full stack projects.</p>
         </div>
         <div class="skills">
           <h2>skills</h2>
