added tailwind css

--- a/index.html
+++ b/index.html
@@ -69,8 +69,13 @@
             <li>
               <i class="devicon-github-original-wordmark"></i>
             </li>
+          </ul>
+          <ul>
             <li>
               <i class="devicon-git-plain-wordmark colored"></i>
+            </li>
+            <li>
+              <i class="devicon-tailwindcss-original-wordmark"></i>
             </li>
           </ul>
             
@@ -181,7 +186,7 @@
           </div>
           <div class="card"> 
             <div class="card-image">
-              <img src="./images/to-do-app.png" alt="test" height="300px" width="400">
+              <img src="./images/to-do-app.png" alt="pic7" height="300px" width="400">
             </div>
             <div class="card-header" style = "background:rgb(240, 149, 239);">
               <div>
@@ -195,6 +200,23 @@
               </div>
             </div>
             <p>Use JavaScript with the DOM and localStorage APIs to make a to-do-list that user can add items to</p>
+          </div>
+          <div class="card"> 
+            <div class="card-image">
+              <img src="./images/etch-a-sketch.png" alt="pic8" height="300px" width="400">
+            </div>
+            <div class="card-header" style = "background:rgb(226, 8, 8);" >
+              <div>
+                <h4>Etch-A-Sketch</h4>
+              </div>
+              <div>
+                <ul>
+                  <li><a href="https://github.com/Priyarikson/Etch-A-Sketch" target="_blank"><i class="devicon-github-original"></i></a></li>
+                  <li><a href="https://priyarikson.github.io/Etch-A-Sketch/"><span class="material-symbols-outlined">open_in_new</span></a></li>
+                </ul>
+              </div>
+            </div>
+            <p>a browser version of something between a sketchpad and an Etch-A-Sketch.</p>
           </div>
           <div class="card"> 
             <div class="card-image">
