--- a/index.html
+++ b/index.html
@@ -220,6 +220,23 @@
           </div>
           <div class="card"> 
             <div class="card-image">
+              <img src="./images/trivia.png" alt="pic9" height="300px" width="400">
+            </div>
+            <div class="card-header" style = "background:rgb(2, 60, 252);" >
+              <div>
+                <h4>Trivia</h4>
+              </div>
+              <div>
+                <ul>
+                  <li><a href="https://github.com/Priyarikson/trivia" target="_blank"><i class="devicon-github-original"></i></a></li>
+                  <li><a href="https://priyarikson.github.io/trivia"><span class="material-symbols-outlined">open_in_new</span></a></li>
+                </ul>
+              </div>
+            </div>
+            <p>a webpage using HTML, CSS, and JavaScript to let users answer trivia questions.</p>
+          </div>
+          <div class="card"> 
+            <div class="card-image">
               <img src="./images/airbnb-clone.png" alt="test" height="300px" width="400">
             </div>
             <div class="card-header" style = "background:rgb(166, 9, 245);">
